--- a/Back/pom.xml
+++ b/Back/pom.xml
@@ -61,7 +61,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc11</artifactId>
+			<artifactId>ojdbc8</artifactId>
+			<version>12.2.0.1</version>
 		</dependency>	
 		<dependency>
 			<groupId>org.projectlombok</groupId>
