--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.jpa.properties.hibernate.format-sql=true
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
+
