--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -20,5 +20,4 @@ spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
-
+hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
