--- a/Back/pom.xml
+++ b/Back/pom.xml
@@ -2,100 +2,119 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<!-- Spring Boot 부모 POM 설정 -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.4.1</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/> <!-- 부모를 Maven 중앙 저장소에서 가져옴 -->
 	</parent>
+
+	<!-- 프로젝트 기본 정보 -->
 	<groupId>com.smhrd</groupId>
 	<artifactId>ptnv</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>PTNV</name>
 	<description>Demo project for Spring Boot</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+
+	<!-- 프로젝트 전역 속성 -->
 	<properties>
-		<java.version>17</java.version>
+		<java.version>17</java.version> <!-- 사용 중인 Java 버전 -->
 	</properties>
+
+	<!-- 의존성 목록 -->
 	<dependencies>
+		<!-- Spring Data JPA -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<!-- Spring Web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<!-- Spring Web Services -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web-services</artifactId>
 		</dependency>
+
+		<!-- MyBatis Starter -->
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>3.0.4</version>
+			<version>3.0.4</version> <!-- 명시적으로 버전 추가 -->
 		</dependency>
 
+		<!-- 개발 도구 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
-			<optional>true</optional>
+			<optional>true</optional> <!-- 선택적 의존성 -->
 		</dependency>
+
+		<!-- MySQL 데이터베이스 드라이버 -->
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<scope>runtime</scope> <!-- 런타임에만 사용 -->
 		</dependency>
+
+		<!-- Oracle 데이터베이스 드라이버 -->
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
-			<version>12.2.0.1</version>
-		</dependency>	
+			<version>12.2.0.1</version> <!-- 명시적으로 버전 추가 -->
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<optional>true</optional> <!-- 선택적 의존성 -->
 		</dependency>
+
+		<!-- 테스트 의존성 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<scope>test</scope> <!-- 테스트 시에만 사용 -->
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter-test</artifactId>
-			<version>3.0.4</version>
+			<version>3.0.4</version> <!-- 명시적으로 버전 추가 -->
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
+	<!-- 빌드 관련 설정 -->
 	<build>
 		<plugins>
+			<!-- Maven 컴파일러 플러그인 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+					<source>${java.version}</source> <!-- 컴파일 소스 버전 -->
+					<target>${java.version}</target> <!-- 컴파일 타겟 버전 -->
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.28</version> <!-- Lombok 버전 -->
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
+
+			<!-- Spring Boot Maven 플러그인 -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -104,11 +123,10 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-						</exclude>
+						</exclude> <!-- JAR 생성 시 Lombok 제외 -->
 					</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
