--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -20,4 +20,8 @@ spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
 
-hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
+
+mybatis.mapper-locations=classpath:mapper/**/*.xml
+spring.jpa.open-in-view=false
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
