--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=PTNV
 server.port=8093
 server.servlet.context-path=/PTNV
 
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@project-db-cgi.smhrd.com:1524/XE
 spring.datasource.username=campus_24IS_CLOUD_p3_1
 spring.datasource.password=smhrd1
@@ -11,6 +11,7 @@ spring.datasource.password=smhrd1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
@@ -20,8 +21,5 @@ spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle11gDialect
-
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 spring.jpa.open-in-view=false
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
