--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=smhrd1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
