--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8093
 server.servlet.context-path=/PTNV
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@project-db-cgi.smhrd.com:1524/XE
+spring.datasource.url=jdbc:oracle:thin:@project-db-cgi.smhrd.com:1524/xe
 spring.datasource.username=campus_24IS_CLOUD_p3_1
 spring.datasource.password=smhrd1
 
