--- a/Back/pom.xml
+++ b/Back/pom.xml
@@ -55,6 +55,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web-services</artifactId>
         </dependency>
+        <dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-data-jpa</artifactId>
+    		<exclusions>
+        		<exclusion>
+            		<groupId>org.hibernate</groupId>
+            		<artifactId>hibernate-core</artifactId>
+        		</exclusion>
+    		</exclusions>
+		</dependency>
     </dependencies>
 
     <build>
