--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -23,4 +23,4 @@ spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
 
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 spring.jpa.open-in-view=false
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
