--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -22,7 +22,6 @@ spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
 spring.datasource.hikari.pool-name=HikariCP
 
-mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.smhrd.ptnv.model
+mybatis.mapper-locations=classpath:mapper/**/*.xml
 spring.jpa.open-in-view=true
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
