--- a/Back/pom.xml
+++ b/Back/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.4.1</version>
         <relativePath/>
     </parent>
-    
+
     <groupId>com.smhrd</groupId>
     <artifactId>ptnv</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -16,7 +16,7 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>21</java.version> <!-- Java 21로 변경 -->
+        <java.version>17</java.version>  <!-- ✅ Java 17로 변경 -->
     </properties>
 
     <dependencies>
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>	
+        </dependency>    
 
         <!-- MyBatis -->
         <dependency>
@@ -33,11 +33,11 @@
             <version>3.0.4</version>
         </dependency>
 
-        <!-- Oracle JDBC -->
+        <!-- Oracle JDBC (Java 17 호환) -->
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc8</artifactId> <!-- Java 17+ 지원 -->
-            <version>21.7.0.0</version>
+            <artifactId>ojdbc8</artifactId>  <!-- ✅ Java 17과 호환되는 최신 버전 -->
+            <version>19.8.0.0</version>
         </dependency>
 
         <!-- Lombok -->
@@ -80,15 +80,23 @@
 
     <build>
         <plugins>
+            <!-- ✅ Java 17을 명확하게 설정 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+
             <!-- Spring Boot Maven Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <mainClass>com.smhrd.ptnv.PtnvApplication</mainClass>
-                    <layers>
-                        <enabled>true</enabled>
-                    </layers>
                 </configuration>
             </plugin>
         </plugins>
