--- a/Front/package.json
+++ b/Front/package.json
@@ -6,19 +6,33 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
+    "crypto-browserify": "^3.12.1",
     "dotenv": "^16.4.7",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.3",
     "recharts": "^2.15.0",
+    "redux": "^5.0.1",
+    "redux-actions": "^3.0.3",
+    "redux-thunk": "^3.1.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
