--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.datasource.hikari.pool-name=HikariCP
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 spring.jpa.open-in-view=true
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+
+kakao.client_id=27ea55845cbe29c957aa49b07e296a18
+kakao.redirect_uri=http://localhost:3000/auth
