--- a/Back/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/Back/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,17 @@
-{"properties": [{
-  "name": "spring.web.cors.allowed-origin-patterns",
-  "type": "java.lang.String",
-  "description": "A description for 'spring.web.cors.allowed-origin-patterns'"
-}]}
+{"properties": [
+  {
+    "name": "spring.web.cors.allowed-origin-patterns",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.web.cors.allowed-origin-patterns'"
+  },
+  {
+    "name": "kakao.client_id",
+    "type": "java.lang.String",
+    "description": "A description for 'kakao.client_id'"
+  },
+  {
+    "name": "kakao.redirect_uri",
+    "type": "java.lang.String",
+    "description": "A description for 'kakao.redirect_uri'"
+  }
+]}
