--- a/Front/package.json
+++ b/Front/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
     "@reduxjs/toolkit": "^2.5.1",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "browserify-zlib": "^0.2.0",
