--- a/Back/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/Back/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,25 @@
     "name": "kakao.redirect_uri",
     "type": "java.lang.String",
     "description": "A description for 'kakao.redirect_uri'"
+  },
+  {
+    "name": "spring.s3.accessKey",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.s3.accessKey'"
+  },
+  {
+    "name": "spring.s3.secretKey",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.s3.secretKey'"
+  },
+  {
+    "name": "spring.s3.bucket",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.s3.bucket'"
+  },
+  {
+    "name": "file.upload-dir",
+    "type": "java.lang.String",
+    "description": "A description for 'file.upload-dir'"
   }
 ]}
