--- a/Back/pom.xml
+++ b/Back/pom.xml
@@ -61,7 +61,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<!-- Spring Web Services -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -70,7 +69,6 @@
 		<dependency>
 			<groupId>org.springframework.ws</groupId>
 			<artifactId>spring-ws-core</artifactId>
-			<version>3.1.1</version>
 		</dependency>
 
 		<!-- 테스트 관련 -->
@@ -80,10 +78,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>3.0.4</version>
@@ -91,7 +85,6 @@
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
-			<version>23.3.0.23.09</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -136,6 +129,20 @@
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>1.11.901</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>3.0.2.RELEASE</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-mock -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-mock</artifactId>
+			<version>2.0.7</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
