--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -27,7 +27,8 @@ spring.jpa.open-in-view=true
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 
 kakao.client_id=27ea55845cbe29c957aa49b07e296a18
-kakao.redirect_uri=http://localhost:3000/auth
+kakao.redirect_uri=http://211.188.53.71
+
 
 spring.s3.accessKey=ncp_iam_BPASKR4T0H9Q8xxxu24W
 spring.s3.secretKey=ncp_iam_BPKSKRAfEVt5ZrpK0ydpvbVT5bj6FFLCJL
